# tandem-simulator

./: .flake8  .gitignore  AUTHENTICATION_VALIDATION_REPORT.md  BYTE_STRUCTURE_MAP.txt  CLAUDE.md  CURRENTBOLUSSTATUSRESPONSE_EXTRACTION.md  CURRENTSTATUS_VALIDATION_REPORT.md  CurrentBolusStatusResponse_EXACT.py  EXTRACTION_SUMMARY.txt  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  Makefile  PLAN.md  PumpVersionResponse_EXACT.py  PumpVersionResponse_IMPLEMENTATION_DETAILS.md  README.md  README_IMPLEMENTATION.md  pumpX2_MESSAGE_STRUCTURE_MAP.md  pyproject.toml  requirements-ci.txt  requirements-dev-ci.txt  requirements-dev.txt  requirements.txt  setup.py  simulator.py
.github/workflows/: ci.yml
config/: default_config.json  default_state.json  paired_devices.json  tui_config.json
tandem_simulator/: __init__.py
tandem_simulator/authentication/: __init__.py  authenticator.py  jpake.py  jpake_encoding.py  pairing.py  session.py
tandem_simulator/ble/: __init__.py  advertisement.py  connection.py  gatt_server.py  peripheral.py
tandem_simulator/handlers/: __init__.py  control.py  events.py  history.py  request_handler.py  status.py
tandem_simulator/protocol/: __init__.py  crc.py  crypto.py  message.py  packetizer.py
tandem_simulator/protocol/messages/: __init__.py  authentication.py  status.py
tandem_simulator/protocol/messages/request/: __init__.py
tandem_simulator/protocol/messages/request/authentication/: CentralChallengeRequest.py  Jpake1aRequest.py  Jpake1bRequest.py  Jpake2Request.py  Jpake3SessionKeyRequest.py  Jpake4KeyConfirmationRequest.py  PumpChallengeRequest.py  __init__.py
tandem_simulator/protocol/messages/request/currentStatus/: ApiVersionRequest.py  CurrentBasalStatusRequest.py  CurrentBatteryV1Request.py  CurrentBolusStatusRequest.py  InsulinStatusRequest.py  PumpVersionRequest.py  __init__.py
tandem_simulator/protocol/messages/response/: __init__.py
tandem_simulator/protocol/messages/response/authentication/: CentralChallengeResponse.py  Jpake2Response.py  (+6 more)
tandem_simulator/protocol/messages/util/: __init__.py  bytes.py
tandem_simulator/state/: __init__.py  persistence.py  pump_state.py
tandem_simulator/tui/: __init__.py  app.py  config_panel.py  controls.py  dashboard.py  event_generator.py  log_view.py
tandem_simulator/utils/: __init__.py  constants.py  logger.py
tests/: __init__.py  test_authentication.py  test_basic.py  test_handlers.py  test_protocol.py  test_state.py
(+7 files in other folders)
