[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tandem-simulator"
version = "0.1.0"
description = "BLE simulator for Tandem Mobi insulin pump"
readme = "README.md"
authors = [
    { name = "Tandem Simulator Project" }
]
license = "Apache-2.0"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: System :: Hardware",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "dbus-python>=1.3.2",
    "PyGObject>=3.42.0",
    "cryptography>=41.0.0",
    "rich>=13.7.0",
    "textual>=0.44.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pylint>=3.0.0",
    "isort>=5.13.0",
    "types-PyYAML>=6.0.0",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "ipython>=8.18.0",
]

[project.scripts]
tandem-simulator = "simulator:main"

[project.urls]
Homepage = "https://github.com/jwoglom/tandem-simulator"
Repository = "https://github.com/jwoglom/tandem-simulator"
Issues = "https://github.com/jwoglom/tandem-simulator/issues"

[tool.setuptools]
packages = ["tandem_simulator"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=tandem_simulator --cov-report=term-missing"

[tool.coverage.run]
source = ["tandem_simulator"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
